crates/analyzer/tests/snapshots/errors__binary_op_boolean_mismatch2.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: type mismatch
  ┌─ [snippet]:3:12
  │
3 │   false or 1
  │            ^ this has type `u256`; expected type `bool`


